[project]
name = "streamlit-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "censusdis>=1.4.2",
    "ipykernel>=6.30.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "streamlit>=1.48.0",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
    "flake8>=7.3.0",
    "ruff>=0.12.8",
]
